errors.txt
sudo g++ -o Northian-Display-Driver ./main.cpp -lgpiod -lpthread --pedantic
./main.cpp: In function ‘int read_switch(gpiod_chip*, const char*, unsigned int)’:
./main.cpp:34:29: error: ‘gpiod_chip_get_line’ was not declared in this scope; did you mean ‘gpiod_chip_get_info’?
   34 |   struct gpiod_line *line = gpiod_chip_get_line(chip, offset);
      |                             ^~~~~~~~~~~~~~~~~~~
      |                             gpiod_chip_get_info
./main.cpp:36:15: error: ‘gpiod_line_get_value’ was not declared in this scope; did you mean ‘gpiod_line_value’?
   36 |   int value = gpiod_line_get_value(line);
      |               ^~~~~~~~~~~~~~~~~~~~
      |               gpiod_line_value
./main.cpp:37:3: error: ‘gpiod_line_release’ was not declared in this scope; did you mean ‘gpiod_line_request’?
   37 |   gpiod_line_release(line);
      |   ^~~~~~~~~~~~~~~~~~
      |   gpiod_line_request
./main.cpp: In function ‘int main(int, char**)’:
./main.cpp:43:29: error: ‘gpiod_chip_open_by_name’ was not declared in this scope; did you mean ‘gpiod_chip_info_get_name’?
   43 |   struct gpiod_chip *chip = gpiod_chip_open_by_name("gpiochip0");
      |                             ^~~~~~~~~~~~~~~~~~~~~~~
      |                             gpiod_chip_info_get_name
./main.cpp:53:9: error: redeclaration of ‘int sw1’
   53 |     int sw1 = read_switch(chip, "Switch 1", 15);
      |         ^~~
./main.cpp:52:9: note: ‘int sw1’ previously declared here
   52 |     int sw1 = read_switch(chip, "Switch 1", 16);
      |         ^~~
./main.cpp:54:9: error: redeclaration of ‘int sw1’
   54 |     int sw1 = read_switch(chip, "Switch 1", 13);
      |         ^~~
./main.cpp:52:9: note: ‘int sw1’ previously declared here
   52 |     int sw1 = read_switch(chip, "Switch 1", 16);
      |         ^~~
./main.cpp:55:9: error: redeclaration of ‘int sw1’
   55 |     int sw1 = read_switch(chip, "Switch 1", 12);
      |         ^~~
./main.cpp:52:9: note: ‘int sw1’ previously declared here
   52 |     int sw1 = read_switch(chip, "Switch 1", 16);
      |         ^~~